--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -117,5 +117,8 @@
     </div>
   </div>
 </body>
-
+<footer>
+  <hr/>
+  <p style="color: red; text-align: center;">© 2020 ShibaBank _ Internet Banking </p>
+</footer>
 </html>
