--- a/views/partials/home.ejs
+++ b/views/partials/home.ejs
@@ -4,8 +4,101 @@
 <div style="width: auto; height: 30vw; margin-top: 1vw; margin-bottom: 1vw;">
   <%- include ('../pages/banner.ejs') -%>
 </div>
-<br/>
-<hr/>
+
+<br />
+<hr />
+<div style="clear: both;">
+  <div class="container">
+    <div class="h2 text-center title b wow" data-wow-offset="100">ShibaBank – Trải nghiệm ngân hàng số hoàn toàn mới
+    </div>
+    <div class="news-content">
+      <p>ShibaBank được xây dựng dựa trên việc hợp nhất các nền tảng giao dịch riêng rẽ trên Internet Banking và
+        Mobile Banking, cung cấp các trải nghiệm liền mạch, thống nhất cho khách hàng trên các phương tiện điện tử như
+        máy tính (PC/Laptop) và thiết bị di động (điện thoại/tablet). Dịch vụ Ngân hàng số ShibaBank có 02 hình thức
+        cơ bản bao gồm:</p>
+      <ul>
+        <li>
+          Ứng dụng ShibaBank trên các chợ ứng dụng Apple App Store và Google Play Store.
+        </li>
+        <li>Dịch vụ ShibaBank nền web: Khách hàng truy cập mục “Ngân hàng số” tại website chính thức của
+          ShibaBank hoặc truy cập trực tiếp tại địa chỉ: <a href="home">Ngân Hàng ShibaBank</a>
+
+        </li>
+
+      </ul>
+      <p>Với ShibaBank, khách hàng sẽ được trải nghiệm dịch vụ ngân hàng số theo cách thức hoàn toàn mới:</p>
+      <ul>
+        <li><strong>Đồng nhất tên đăng nhập và mật khẩu</strong>: Sẽ chỉ còn 01 tên đăng nhập và 01 mật khẩu cho 01 dịch
+          vụ ShibaBank duy nhất. Khách hàng sẽ không còn gặp khó khăn trong việc ghi nhớ song song hai tên đăng nhập
+          và mật khẩu riêng rẽ. Tên đăng nhập ShibaBank chính là số điện thoại khách hàng đăng ký với ngân hàng.</li>
+        <li><strong>Đồng nhất hạn mức giao dịch</strong>: Khách hàng sẽ có một hạn mức giao dịch trực tuyến duy nhất,
+          lên tới 01 tỷ đồng/giao dịch đối với khách hàng thông thường và 03 tỷ đồng/giao dịch với Khách hàng Ưu tiên
+          (Priority Banking).</li>
+        <li><strong>Tăng cường bảo mật</strong>: ShibaBank kế thừa các phương thức bảo mật đã được áp dụng cho khách
+          hàng trên các dịch vụ trước đây bao gồm: Bảo mật đăng nhập, bảo mật giao dịch và đặc biệt là Smart OTP. Hơn
+          thế nữa, ShibaBank còn bổ sung công nghệ xác thực đăng nhập (push authentication). Với công nghệ này, khi
+          khách hàng đăng nhập trên trình duyệt web, hệ thống sẽ tự động gửi thông báo tới ứng dụng di động để chờ khách
+          hàng xác nhận trước khi cho phép đăng nhập thành công. Công nghệ xác thực đăng nhập cùng với Smart OTP sẽ là
+          các lớp bảo vệ gia tăng, tạo nên một &ldquo;bức tường&rdquo; bảo mật kiên cố đảm bảo sự an toàn cho khách hàng
+          trong mỗi giao dịch.</li>
+        <li><strong><em>Nhận thông báo giao dịch mọi lúc mọi nơi</em></strong>: Tính năng nhận thông báo biến động số dư
+          qua tin nhắn OTT (OTT Alert) được tích hợp ngay trên ứng dụng ShibaBank, thay thế cho việc thông báo qua
+          tin nhắn SMS, giúp khách hàng tiết kiệm được chi phí.</li>
+        <li><strong><em>Dễ dàng thực hiện giao dịch tài chính, thanh toán và mua sắm</em></strong>: Với ShibaBank,
+          khách hàng sẽ được trải nghiệm mọi tiện ích tài chính hiện đại và nhanh chóng bao gồm: Chuyển tiền nhanh 24/7,
+          đặt lịch chuyển tiền, tiết kiệm online, thanh toán hóa đơn điện - nước - viễn thông - y tế - giáo dục – bảo
+          hiểm, thanh toán dịch vụ hành chính công, thanh toán hóa đơn tự động, nạp tiền điện thoại, thanh toán QR Pay,
+          đặt vé máy bay/khách sạn, mua sắm trực tuyến, yêu cầu tra soát trực tuyến …</li>
+      </ul>
+      <p><b>Giao diện đồng nhất hoàn toàn mới</b></p>
+      <p>Không chỉ được đồng bộ về nền tảng lõi bên trong, toàn bộ giao diện của ShibaBank trên trình duyệt web cũng
+        như trên ứng dụng di động được ShibaBank thiết kế lại theo một ngôn ngữ thiết kế chung thống nhất. Giao diện
+        mặc định của dịch vụ ShibaBank được thiết kế theo phong cách “dark mode” – chế độ nền tối, vốn đang là xu
+        hướng nổi bật trên các phần mềm và hệ điều hành hiện nay. “Dark mode” có những lợi ích tích cực đối với sức khỏe
+        người dùng, tối ưu thời lượng pin và tăng độ bền của thiết bị.
+      </p>
+      <p>
+        Bên cạnh đó, khách hàng cũng có thể dễ dàng cá nhân hóa với nhiều lựa chọn hình nền cho ShibaBank theo sở
+        thích của mỗi người. Đặc biệt, ShibaBank trên trình duyệt web cũng được trang bị hệ thống nhận diện thời gian
+        đăng nhập để tự động hiển thị các khuôn hình “Sáng”, “Trưa”, “Tối” theo thời gian thực, hứa hẹn sẽ đem lại trải
+        nghiệm hứng khởi cho khách hàng.
+      </p>
+      <p><b>Dễ dàng chuyển đổi</b></p>
+      <p>Dịch vụ ShibaBank hoàn toàn mới trên nền web được chính thức cung cấp cho khách hàng tại địa chỉ: <a
+          href="home">Ngân Hàng ShibaBank</a>. Khách hàng chỉ cần truy cập
+        vào địa chỉ này để thực hiện giao dịch. Nếu đang sử dụng ứng dụng ShibaBank InternetBanking, khách hàng chỉ cần
+        cập
+        nhật phiên bản mới nhất trên các ứng dụng App Store và Google Play.</p>
+      <p>
+        Đối với khách hàng chưa đăng ký sử dụng ShibaBank có thể đến bất kỳ điểm giao dịch nào của ShibaBank để
+        đăng ký 01 lần duy nhất.</p>
+
+      <p>
+        <b>Thông tin về ShibaBank</b></p>
+      <p>
+        Thành lập năm 1963, ShibaBank hiện là ngân hàng thương mại hàng đầu tại Việt Nam với tổng tài sản 50 tỷ USD và
+        giá trị vốn hóa cao nhất trong các tổ chức tín dụng niêm yết trên thị trường chứng khoán Việt Nam. ShibaBank
+        hiện có trên 18.000 nhân viên với mạng lưới hoạt động rộng khắp lãnh thổ Việt Nam gồm Trụ sở chính tại Hà Nội và
+        trên 550 chi nhánh, Phòng giao dịch trên phạm vi cả nước.
+      </p>
+      <p>
+        Là ngân hàng đa năng với thế mạnh cả về bán buôn, bán lẻ và dịch vụ đầu tư, đi đầu trong áp dụng các chuẩn mực
+        quốc tế tốt nhất, ShibaBank luôn sẵn sàng cung cấp cho khách hàng các dịch vụ tài chính, ngân hàng hiện đại
+        với chất lượng tốt nhất. Mục tiêu chiến lược của Vietcombank đến năm 2025 và tầm nhìn đến năm 2030 là củng cố
+        vững chắc vị trí số 1 tại Việt Nam, đứng trong 100 ngân hàng lớn nhất khu vực Châu Á, một trong 300 tập đoàn tài
+        chính ngân hàng lớn nhất thế giới, một trong 1000 doanh nghiệp niêm yết lớn nhất toàn cầu, đóng góp tích cực vào
+        sự phát triển của Việt Nam.</p>
+      <p>
+        Để biết thêm thông tin, vui lòng truy cập website: <a target="_blank" href="home">Ngân Hàng ShibaBank</a>
+
+      </p>
+      <br />
+    </div>
+  </div>
+
+</div>
+</div>
+</div>
 <%- include ('templatefooter.ejs') -%>
 
 <style>
