--- a/views/partials/templatefooter.ejs
+++ b/views/partials/templatefooter.ejs
@@ -4,5 +4,8 @@
 </div>
 </div>
 </body>
-
+<hr/>
+<footer>
+    <p style="color: red; text-align: center;">© 2020 ShibaBank _ Internet Banking </p>
+</footer>
 </html>
