--- a/views/partials/templateheader.ejs
+++ b/views/partials/templateheader.ejs
@@ -62,5 +62,5 @@
             </ul>
         </div>
     </nav>
-    <div style="margin-left: 2vw; margin-right: 2vw;">
+    <div style="margin-left: 2vw; margin-right: 2vw; background-image: linear-gradient(to bottom right, rgba(235, 197, 235, 0.89), rgb(255, 255, 255));">
         <div class="row" style="margin-top: 5vw;">
