--- a/views/partials/transfers.ejs
+++ b/views/partials/transfers.ejs
@@ -4,34 +4,48 @@
 
 <%- include ('templateright.ejs') -%>
 <br />
-<div class="container">
-    <form method="POST" action="">
-        <div class="form-group">
-            <h5>Thông tin người chuyển</h5>
-            <label for="accountNumber">Tài khoản nguồn</label>
-            <input type="text" class="form-control" id="accountNumber" name="accountNumber" value="<%= bank.accountNumber %>" disabled>
-            <samp>Số dư khả dụng: <%= bank.defaultMoney %> VNĐ</samp>
+<hr/>
+<h5 style="text-align: center;">Thông tin người chuyển</h5>
+<div class="form-group">
+                    
+    <label for="accountNumber">Tài khoản nguồn</label>
+    <input type="text" class="form-control" id="accountNumber" name="accountNumber"
+        value="<%= bank.accountNumber %>" disabled>
+    <samp>Số dư khả dụng: <%= bank.defaultMoney %> VNĐ</samp>
+</div>
+<br/>
+<hr/>
+<div class="row">
+    <div class="col-md-8" style=" border-right:double ; background-image: linear-gradient(to bottom right, rgba(235, 197, 235, 0.89), rgba(121, 14, 19, 0.76));">
+        <div class="container">
+            <form method="POST" action="">
+                <div class="form-group">
+                    <h5>Thông tin người hưởng</h5>
+                    <input type="text" class="form-control" name="beneficiary" id="beneficiary"
+                        placeholder="Tài khoản đích/ VND">
+                </div>
+                <div class="form-group">
+                    <h5>Thông tin giao dịch</h5>
+                    <input type="number" class="form-control" name="money" id="money" placeholder="Số tiền (VND)">
+                </div>
+                <div class="form-group">
+                    <label for="">Phí giao dịch</label>
+                    <select class="form-control" name="charge" id="charge">
+                        <option value="1">Người chuyển trả</option>
+                        <option value="2">Người nhận trả</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <textarea class="form-control" name="content" id="content" rows="3" placeholder="Nội dung"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary mb-2">Tiếp tục</button>
+            </form>
         </div>
-        <div class="form-group">
-                <h5>Thông tin người hưởng</h5>
-                <input type="text" class="form-control"  name="beneficiary" id="beneficiary" placeholder="Tài khoản đích/ VND">
-        </div>
-        <div class="form-group">
-            <h5>Thông tin giao dịch</h5>
-            <input type="number" class="form-control" name="money" id="money" placeholder="Số tiền (VND)">
-        </div>
-        <div class="form-group">
-            <label for="">Phí giao dịch</label>
-            <select class="form-control" name="charge" id="charge">
-                <option value="1">Người chuyển trả</option>
-                <option value="2">Người nhận trả</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <textarea class="form-control" name="content" id="content" rows="3" placeholder="Nội dung"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary mb-2">Tiếp tục</button>
-    </form>
+        
     </div>
+    <div class="col-md-4" >
+        <%- include ('ToolRight.ejs') -%>
+    </div>
+</div>
 
 <%- include ('templatefooter.ejs') -%>
