--- a/views/partials/changepassword.ejs
+++ b/views/partials/changepassword.ejs
@@ -12,15 +12,15 @@
         </div>
         <div class="form-group">
                 <h5>Mật Khẩu Cũ</h5>
-                <input name="password1" id="password1" type="password" placeholder="Mật khẩu Cũ" />
+                <input name="passwordOld"  type="password" placeholder="Mật khẩu Cũ" />
         </div>
         <div class="form-group">
             <h5>Mật Khẩu Mới</h5>
-            <input name="password2" id="password2" type="password" placeholder=" Mật khẩu Mới" />
+            <input name="passwordNew1" id="passwordNew1" type="password" placeholder=" Mật khẩu Mới" />
         </div>
         <div class="form-group">
             <h5>Xác Nhận Mật Khẩu Mới</h5>
-            <input name="password2" id="password2" type="password" placeholder=" Mật khẩu Mới" />
+            <input name="passwordNew2" id="passwordNew2" type="password" placeholder=" Mật khẩu Mới" />
         </div>
        
        
