--- a/views/partials/templateleft.ejs
+++ b/views/partials/templateleft.ejs
@@ -31,6 +31,8 @@
                 </ul>
               </div>
             </li>
+            <li class="nav-item"><a class="nav-link text-truncate" href="/changepassword"><i class="fa fa-bar-chart"></i> <span
+              class="d-none d-sm-inline">Quản Lí Mật Khẩu</span></a></li>
             <li class="nav-item"><a class="nav-link text-truncate" href="#"><i class="fa fa-bar-chart"></i> <span
                   class="d-none d-sm-inline">Tiền gửi</span></a></li>
             <li class="nav-item"><a class="nav-link text-truncate" href="#"><i class="fa fa-download"></i> <span
