--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -88,22 +88,25 @@
 
             <div class="mReg right_mReg">
               <div class="helpSer">
-                <h3>Công cụ</h3>
+                <h3>Công Cụ</h3>
                 <ul>
                   <!-- <li><a href="tcbaolanh.jsp" style="color:#AF1E40 !important;">Tra cứu bảo lãnh</a></li>  -->
                   <!-- <li><a href="tcbaolanh.jsp">Tra cứu bảo lãnh</a></li> -->
-                  <li><a href="#">Tra cứu bảo lãnh</a></li>
+                  <li><a href="#"
+                    style=" font-size: 20px;font-family: Helvetica, sans-serif !important;">Tra Cứu Bão Lãnh</a></li>
                   <!-- <li><a href="otp_orders.jsp" style="color:#AF1E40 !important;font-size: 15px;font-family: Helvetica, sans-serif !important;font-weight: bold;">Đăng ký chuyển đổi số điện thoại nhận SMS OTP từ 11 số sang 10 số</a></li> -->
                 </ul>
               </div>
               <div class="helpSer">
-                <h3>Trợ giúp</h3>
+      
+                <h3>Trợ Giúp</h3>
                 <ul>
-                  <li><a href="./CanhBaoGiaoDichGiaMaoDichVuNganHangDienTu.pdf"
-                      style="color:#AF1E40 !important;font-size: 20px;font-family: Helvetica, sans-serif !important;">Khuyến
-                      Cáo Bảo Mật Thông Tin</a></li>
-                  <li><a href="./Agr_clearCache.doc" style="color:#AF1E40 !important;">Xóa cache trên web browser</a>
-                  </li>
+                  <li><a href="/huongdansudung.html"
+                    style=" font-size: 20px;font-family: Helvetica, sans-serif !important;">Hướng Dẫn Sử Dụng</a></li>
+                  <li><a href="/baomatthongtin.html"
+                      style="font-size: 20px;font-family: Helvetica, sans-serif !important;">Khuyến
+                      Cáo Bảo Mật Thông Tin</a></li>  
+                
                 </ul>
               </div>
             </div>
