--- a/views/partials/templateheader.ejs
+++ b/views/partials/templateheader.ejs
@@ -36,11 +36,11 @@
                     <div class="dropdown-menu">
                       <a class="dropdown-item" href="/accountNumber">Thông tin tài khoản</a>
                       <a class="dropdown-item" href="/">Lịch sử giao dịch</a>
-                      <a class="dropdown-item" href="/changepassword">Đổi mật khẩu</a>
+                      <!-- <a class="dropdown-item" href="/changepassword">Đổi mật khẩu</a> -->
                     </div>
                   </li>
                   <li class="nav-item">
-                    <a href="" class="nav-link">Chuyển tiền</a>
+                    <a href="/transfers" class="nav-link">Chuyển tiền</a>
                 </li>
                 <li class="nav-item">
                     <a href="" class="nav-link">Thanh toán</a>
