--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="css/mainstyle.css">
   <link rel="stylesheet" type="text/css" href="css/reponsive.css">
+  <link rel="stylesheet" type="text/css" href="css/home.css">
   <title>ShibaBank Internet Banking | Home Page</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -120,8 +121,5 @@
     </div>
   </div>
 </body>
-<footer>
-  <hr/>
-  <p style="color: red; text-align: center;">© 2020 ShibaBank _ Internet Banking </p>
-</footer>
+<%- include ('../partials/templatefooter.ejs') -%>
 </html>
