--- a/views/partials/accountNumber.ejs
+++ b/views/partials/accountNumber.ejs
@@ -10,7 +10,7 @@
     <hr/>
 </div>
 <div class="row">
-    <div class="col-md-10" style="border-right:double ; background-image: linear-gradient(to bottom right, rgba(235, 197, 235, 0.89), rgba(121, 14, 19, 0.76));">
+    <div class="col-md-7" style="border-right:double ;">
         
         <div>
             
@@ -24,7 +24,7 @@
                 value="<%= bank.savingMoney %>" disabled>  </h5>
         </div>
     </div>
-    <div  class="col-md-5">
+    <div  class="col-md-4" style="margin-top: 10vw; margin-left: 2vw;">
         <%- include ('ToolRight.ejs') -%>
     </div>
 
