--- a/views/partials/changepassword.ejs
+++ b/views/partials/changepassword.ejs
@@ -5,35 +5,37 @@
 <%- include ('templateright.ejs') -%>
 <br />
 <div>
-    <h1  >Thay Đổi Mật Khẩu</h1>
-    <br/>
-    <hr/>
-  </div>
+    <h1>Thay Đổi Mật Khẩu</h1>
+    <br />
+    <hr />
+</div>
 
 
-    <div class="row">
-        <div class="col-md-10" style=" border-right:double ; background-image: linear-gradient(to bottom right, rgba(235, 197, 235, 0.89), rgba(121, 14, 19, 0.76));">
-            <div class="container">
-                <form method="POST" action="">
+<div>
+    <div>
+        <div class="container">
+            <form method="POST" action="">
+                <div class="form-group">
+                    <h5>Mật Khẩu Cũ</h5>
+                    <input name="passwordOld" class="form-control" type="password" placeholder="Mật khẩu Cũ" />
+                </div>
+                <div class="form-group">
+                    <h5>Mật Khẩu Mới </h5>
+                    <input name="passwordNew1" class="form-control" id="passwordNew1" type="password"
+                        placeholder=" Mật khẩu Mới" />
+                </div>
+                <div class="form-group">
+                    <h5>Xác Nhận Mật Khẩu Mới</h5>
+                    <input name="passwordNew2" class="form-control" id="passwordNew2" type="password"
+                        placeholder=" Mật khẩu Mới" />
                     <div class="form-group">
-                        <h5>Mật Khẩu Cũ</h5>
-                        <input name="passwordOld" class="form-control"  type="password" placeholder="Mật khẩu Cũ" />
+
                     </div>
-                    <div class="form-group">
-                        <h5>Mật Khẩu Mới </h5>
-                        <input name="passwordNew1" class="form-control" id="passwordNew1" type="password" placeholder=" Mật khẩu Mới" />
-                    </div>
-                    <div class="form-group">
-                        <h5>Xác Nhận Mật Khẩu Mới</h5>
-            <input name="passwordNew2" class="form-control" id="passwordNew2" type="password" placeholder=" Mật khẩu Mới" />               
-            <div class="form-group">
-              
-            </div>
-            <hr>
-            <button type="submit" class="btn btn-primary mb-2">Đổi Mật Khẩu</button>
-        </hr>
-                </form>
-            </div>
-            
+                    <hr>
+                    <button type="submit" class="btn btn-primary mb-2">Đổi Mật Khẩu</button>
+                    </hr>
+            </form>
         </div>
+    </div>
+</div>
 <%- include ('templatefooter.ejs') -%>
