--- a/views/partials/templateheader.ejs
+++ b/views/partials/templateheader.ejs
@@ -14,11 +14,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
-        
+        <link rel="stylesheet" type="text/css" href="css/home.css">
     <title>Internet Banking</title>
 </head>
 
-<body style="background: brown;">
+<body style="background-image: linear-gradient(to bottom right, rgb(66, 1, 1), rgb(253, 253, 253));">
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Internet Banking</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -62,5 +62,5 @@
             </ul>
         </div>
     </nav>
-    <div style="margin-left: 2vw; margin-right: 2vw; background-image: linear-gradient(to bottom right, rgba(235, 197, 235, 0.89), rgb(255, 255, 255));">
-        <div class="row" style="margin-top: 5vw;">
+    <div style="margin-left: 2vw; margin-right: 2vw; background-image: linear-gradient(to bottom right, rgb(233, 231, 231), rgba(255, 255, 255, 0.822)); ">
+        <div class="row" style="margin-top: 0">
