--- a/views/partials/transfers.ejs
+++ b/views/partials/transfers.ejs
@@ -16,11 +16,12 @@
 <br/>
 <hr/>
 <div class="row">
-    <div class="col-md-10" style=" border-right:double ; background-image: linear-gradient(to bottom right, rgba(235, 197, 235, 0.89), rgba(121, 14, 19, 0.76));">
+    <div class="col-md-7" style=" border-right:double ; ">
         <div class="container">
             <form method="POST" action="">
                 <div class="form-group">
                     <h5>Thông tin người hưởng</h5>
+                    <br>
                     <input type="text" class="form-control "  name="beneficiary" id="beneficiary"
                         placeholder="Tài khoản đích/ VND">
                 </div>
@@ -43,7 +44,8 @@
         </div>
         
     </div>
-    <div class="col-md-5" >
+    
+    <div class="col-md-4" style="margin-top: 10vw; margin-left: 2vw;">
         <%- include ('ToolRight.ejs') -%>
     </div>
 </div>
