--- a/views/partials/verifyMoney.ejs
+++ b/views/partials/verifyMoney.ejs
@@ -9,7 +9,7 @@
 <hr/>
 <br/>
 <div class="row" >
-    <div class="col-md-8" style=" border-right:double ; background-image: linear-gradient(to bottom right, rgba(235, 197, 235, 0.89), rgba(121, 14, 19, 0.76));">
+    <div class="col-md-7" style=" border-right:double ;">
         <div class="container">
             <form method="POST">
                 <div class="form-group">
