--- a/views/partials/termSaving.ejs
+++ b/views/partials/termSaving.ejs
@@ -13,7 +13,8 @@
 <hr />
 <div class="row">
     <div class="col-md-7" style=" border-right:double ; ">
-        <div class="container">
+        <div class="container"> 
+            <p><%= war %></p>
             <form action="" method="post">
                 <label for="">Kỳ hạn</label>
                 <select class="form-control" name="term">
@@ -24,7 +25,6 @@
                 <br>
                 <br>
                 <input class="form-control" type="text" name="money" id="money" placeholder="Số tiền gửi">
-                <br>
                 <input class="form-control" type="submit" value="Gửi">
             </form>
         </div>
